<resources>
    <string name="app_name">Vacuum Cleaner</string>
    <string name="label_paired">Paired</string>
    <string name="content_description_icon">Icon</string>
    <string name="label_name">Name:</string>
    <string name="label_sent">sent</string>
    <string name="label_received">received</string>
    <string name="label_parameters">Parameters:</string>
    <string name="label_request">REQUEST</string>
    <string name="label_response">RESPONSE</string>
    <string name="label_status">Status:</string>
    <string name="label_error_message">Error: %s</string>
    <string name="label_response_2">Response:</string>
    <string name="label_broken">Broken</string>
    <string name="label_reconnect">reconnect</string>
    <string name="label_disconnected">disconnected</string>
    <string name="label_connecting">connecting</string>
    <string name="label_connected">connected</string>
    <string name="label_packets">Packets</string>
    <string name="label_content">content:</string>
    <string name="label_mode">Mode:</string>
    <string name="hint_loading_cuurent_configuration">Loading current configuration…</string>
    <string name="label_apply">Apply</string>
    <string name="label_password">Password</string>
    <string name="label_ssid">SSID</string>
    <string name="hint_applying_wifi_settings">Applying Wifi settings…</string>
    <string name="label_service_status">Service status</string>
    <string name="label_validated">Validated</string>
    <string name="label_validating">Validating…</string>
    <string name="template_speed_cm_per_minute">%d CM/Min</string>
    <string name="template_number_with_percentage">%d %%</string>
    <string name="label_range_sensors">Range Radar: L(%d) C(%d) R(%d)</string>
    <string name="label_bumper_hit">Bumper hit: %s</string>
    <string name="label_algorithm">Algorithm</string>
    <string name="label_algorithm_name">Algorithm: %s</string>
    <string name="label_pid_settings">PID Settings</string>
    <string name="label_wifi">WIFI</string>
    <string name="label_history">History</string>
    <string name="label_manual">Manual</string>
    <string name="label_lid_opened">Lid opened</string>
    <string name="label_box_out">Box out</string>
    <string name="template_battery_info">%d %% (%.1f V)</string>
    <string name="label_charging">Charging…</string>
    <string name="label_charged">Charged</string>
    <string name="label_open">Open</string>
    <string name="label_error_occurred">Error occurred</string>
    <string name="label_can_not_find_robot">Can\'t find the robot. If the robot is not connected to the network, click Bind and setup Wi-Fi</string>
    <string name="label_discovering">Discovering…</string>
    <string name="label_connected_with_ip">Connected. IP: %s</string>
    <string name="label_proportional_value">Proportional</string>
    <string name="label_integral_value">Integral</string>
    <string name="label_derivative_value">Derivative</string>
    <string name="label_range">%s (Range %d..%d)</string>
    <string name="label_vacuum_motor">Vacuum Motor</string>
    <string name="label_main_brush_motor">Main Brush Motor</string>
    <string name="label_right_brush_motor">Right Brush Motor</string>
    <string name="label_left_brush_motor">Left Brush Motor</string>
    <string name="label_with_break">With break</string>
    <string name="label_target_wheel_speed">Wheel speed:</string>
    <string name="label_wheels_speed">Wheel speed(Sm\Min): Left(%d) Right(%d)</string>
    <string name="label_resume">Resume</string>
    <string name="label_pause">Pause</string>
    <string name="label_finish">Finish</string>
    <string name="label_shut_down">Shut down</string>
    <string name="label_yes">Yes</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_reboot">Reboot</string>
    <string name="label_shut_down_confirmation_title">Shut Down Confirmation</string>
    <string name="label_shut_down_confirmation_message">Do you want to shut down the robot?</string>
    <string name="label_reboot_confirmation_title">Reboot Confirmation</string>
    <string name="label_reboot_confirmation_message">Do you want to reboot the robot?</string>
    <string name="label_start_time">Start time: %s</string>
    <string name="label_cleaning">Cleaning</string>
    <string name="label_bluetooth_connection_info">You need to bound to the robot through Bluetooth connection in order to perform initial configuration. Please push the Bluetooth button on the robot to enable it and then click Find Robot</string>
    <string name="label_find_robot">Find robot</string>
    <string name="label_discovering_info">Scanning…\nFound %d Bluetooth devices</string>
    <string name="label_turn_on_bluetooth">You need to turn on Bluetooth</string>
    <string name="label_turn_on">Turn on</string>
    <string name="label_location_permission_explained">You are required to allow knowing your location</string>
    <string name="label_allow">label_allow</string>
    <string name="label_robot_not_found">Robot is not found. Please make sure you turned on Bluetooth on the robot</string>
    <string name="label_rescan">Rescan</string>
    <string name="label_retry">Retry</string>
    <string name="label_pairing_failed">Pairing has failed. Please make sure you have started pairing process (Long press Bluetooth button on the robot. The button must start blinking)</string>
    <string name="label_robot_pairing_info">Robot is pairing. Please accept. Note: Pairing process time is 3 minutes</string>
    <string name="label_pair">Pair</string>
    <string name="label_pairing_required">Robot is found but is not paired. You need to pair. First of all enable pairing process by long click Bluetooth button on the robot. Note: pairing process lives max 3 minutes</string>
    <string name="label_robot_found_and_paired">Robot is found and paired</string>
    <string name="label_bluetooth_connection">Bluetooth connection</string>
    <string name="label_wifi_setup">Wifi Setup</string>
    <string name="label_wifi_is_setup">Wi-fi has been setup successfully</string>
    <string name="label_connect">Connect</string>
    <string name="label_ip_address">IP Address: %s</string>
    <string name="label_bind">Bind</string>
    <string name="label_error_occurred_with_message">"Error occurred: %s</string>
</resources>