<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.yurii.vaccumcleaner.screens.pid.PidSettingsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:src="@drawable/ic_pid_controller"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/proportional_value_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/proportional_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/label_proportional_value"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:text="@={viewModel.proportional}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/integral_value_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/proportional_value_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/integral_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_integral_value"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:text="@={viewModel.integral}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/derivative_value_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/integral_value_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/derivative_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_derivative_value"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:text="@={viewModel.derivative}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/apply"
            style="@style/ButtonDarkLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="@{() -> viewModel.apply()}"
            android:text="@string/label_apply"
            app:layout_constraintEnd_toEndOf="@+id/integral_value_layout"
            app:layout_constraintStart_toStartOf="@+id/integral_value_layout"
            app:layout_constraintTop_toBottomOf="@+id/derivative_value_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
